引入nosurf实现csrf token功能

--- a/resources/views/blog_create.html
+++ b/resources/views/blog_create.html
@@ -2,6 +2,7 @@
 
 {{define "main"}}
 <form action="/blog/store" method="POST">
+    <input type="hidden" name="csrf_token" value="{{.CSRFToken}}" />
     <div>
         <label>标题：</label>
         {{with .Form.FieldErrors.title}}
